--- a/面试真题/错题集.md
+++ b/面试真题/错题集.md
@@ -14,3 +14,148 @@ void test1()
 
 strlen（p），返回p的长度，但不计\0  在内。 sizeof 统计的长度包括\0  
 strcpy是从源地址开始拷贝，直到遇到\0为止。
+
+2. 检查下面代码有什么问题？
+void GetMemory( char *p )
+{
+ p = (char *) malloc( 100 );
+}
+void Test( void ) 
+{
+ char *str = NULL;
+ GetMemory( str ); 
+ strcpy( str, "hello world" );
+ printf( str );
+}
+
+> 传入中GetMemory( char *p )函数的形参为字符串指针，在函数内部修改形参并不能真正的改变传入形参的实参值
+而且在函数GetMemory中和Test中没有malloc对应的free，造成内存泄露 
+譬如 
+```c++
+void aa(int a)
+{
+  a=3;
+};
+int main()
+{
+  int a=0;
+  aa(a);
+  显然这时候的a仍然是0
+};
+```
+怎么修改？
+首先我们要有关于指针的基础知识
+
+> char p 是声明一个字符类型变量p ,char * p1 是声明一个字符类型的指针变量 p1 , 那么 char ** p2 就相当与给char类型的指针变量再声明一个指针.(2级指针) 例如
+char *p ;//char 指针 ，表示p里面存一个char型变量的地址
+char **p1;//char *指针 ，表示p1里面存一个char *型变量的地址
+p1 = &p; 
+
+举个例子,假如: char p='a'; //假设声明了p后,p在内存的1000处,则&p=1000(&为取变量首地址) 
+
+char * p1=&p; //则p1=1000,*p1=p='a',p1就和 p 关联了;假设p1被放在2000处 
+
+char ** p2=&p1;//则p2=2000,*p2=p1=&p=1000,**p2=p='a'  
+
+```c++
+//传值调用
+
+void GetMemory( char **p ) // 二级指针p 存储一级指针的地址
+{
+ *p = (char *) malloc( 100 );//*p存储着char元素的地址，给他分配空间
+}
+int main()
+{
+char *str = NULL;
+GetMemory( &str ); // 传入一级指针的地址
+strcpy( str, "hello world" );
+cout<<str<<endl;
+free(str); //释放空间
+｝
+```
+```c++
+//引用调用
+void GetMemory_1(char *&p) // 这个是指针的引用
+{
+p = (char *) malloc (100);
+}
+int main()
+{
+char *str1 = NULL;
+GetMemory_1( str1 );//传入指针
+strcpy( str1, "hello world1" );
+free(str1);
+cout<<str1<<endl;
+}
+
+这个相当于
+void aa(int &a)
+{
+  a=3;
+};
+int main()
+{
+  int a=0;
+  aa(a);
+  //这个时候a的值改变了
+};
+```
+
+3. 检查下面代码有什么问题？
+
+char *GetMemory( void )
+{ 
+ char p[] = "hello world"; 
+ return p; 
+}
+void Test( void )
+{ 
+ char *str = NULL; 
+ str = GetMemory(); 
+ printf( str ); 
+}
+
+> 1. p[]为局部变量，函数返回后 内存会被释放，函数可以返回局部变量 但是不能返回局部变量的地址，包括指向局部变量的指针。 "hello word"被存储在文字存储区 数据p 中存储的是一个副本，函数结束 p被收回 函数所返回的p指向内容变得不确定
+
+> 2. printf函数有问题
+
+解决方法 ：
+```c++
+1. 
+char *GetMemory( void )
+{ 
+ static char p[] = "hello world";  // 放在静态数据区
+ return p; 
+}
+
+2. 
+char* p= " hello world" ; 
+return p; 
+这里p直接指向文字存储区的 " hello world" ，函数按值返回p存储的地址，所以有效
+```
+
+
+4. 下面代码会出现什么问题？
+
+ void GetMemory( char **p, int num )
+{
+ *p = (char *) malloc( num );
+}
+void Test( void )
+{
+ char *str = NULL;
+ GetMemory( &str, 100 );
+ strcpy( str, "hello" ); 
+ printf( str ); 
+}
+
+> 1. num可能<=0
+
+> 2. 未判断内存是否申请成功
+```
+if ( *p == NULL )
+{
+ ...//进行申请内存失败处理
+}
+```
+> 3. 未释放内存free(str)及释放后记得str=NULL,否则可能会导致野指针出现。
