开始计算机网络学习

--- a/学习计划.md
+++ b/学习计划.md
@@ -45,4 +45,8 @@ c++ prime 每天30页
 
 leetcode/剑指offer题目 每天看3题
 
-linux /数据库/计算机网络 每天1集
+计算机网络(自上向下的方法) 每天30页
+
+linux 鸟叔的linux私房菜
+
+最近的计划是先看了c++ prime 和 计算机网络 期间无聊的话看几道剑指offer或牛客网真题 ，其他的先放到后面做
