--- a/面试真题/错题集.md
+++ b/面试真题/错题集.md
@@ -159,3 +159,19 @@ if ( *p == NULL )
 }
 ```
 > 3. 未释放内存free(str)及释放后记得str=NULL,否则可能会导致野指针出现。
+
+
+5. 分别给出BOOL，int，float，指针变量 与“零值”比较的 if 语句（假设变量名为var）
+
+```c++
+bool： if(false==var)
+
+int: if(0==var)
+
+float : 
+const double eps 1e-6
+if(var>=-eps&&var<=eps) 
+
+指针变量 if(NULL==var)
+```
+> 判断的时候 if(NULL != var)和if(var != NULL)前者更好，原因:如果忘记了写！号，对于if(NULL=var)编译器就会报错，这样就能够更容易的发现问题，因为常量不能被赋值。而if(var == NULL)编译器不会报错，就不容易找到错误。
