--- a/计算机网络/计算机网络(自顶向下方法).md
+++ b/计算机网络/计算机网络(自顶向下方法).md
@@ -2,7 +2,10 @@
     - [什么是因特网](#1-1)
     - [网络边缘](#1-2)
     - [网络核心](#1-3)
-
+    - [分组交换网中的时延，丢包和吞吐量](#1-4)
+    - [协议层次及其服务模型](#1-5)
+    - [面对攻击的网络](#1-6)
+- [应用层](#2)
 
 <h1 id='1'>计算机网络和因特网</h1>
 
@@ -83,7 +86,10 @@ what： 在因特网中使用的传输媒体
 
 what: 互联因特网端系统的分组交换机和链路构成的网状网络
 
-### 分组交换
+通过网络链路和交换机移动数据有两个基本方法：电路交换，分组交换
+
+### 分组交换 : 按需分配
+
 
 `分组`： 为了从源端系统向目的端系统发送一个报文，源将长报文划分为较小的数据块
 
@@ -102,5 +108,139 @@ what: 互联因特网端系统的分组交换机和链路构成的网状网络
 每台路由有转发表，用于将目的地址(或目的地址一部分)映射成输出链路，因特网有路由选择协议,自动设置转发表
 
 ### 电路交换
+
+在电路交换网络中，在端系统间通信会话期间，预留了端系统间沿路径通信所需要的资源(缓存，链路传输资源)，因为预留了宽带所以发送方能以恒定速率向接收方传送数据
+
+端到端的电路传输时间与链路数量无关
+
+链路中的电路通过频分复用(FDM) 或 时分复用 (TDM) 实现
+
+FDM: 每条电路连续获得部分带宽   TDM: 每条电路在时隙中周期性(周期为一帧)获得全部带宽
+
+#### 网络的网络
+
+等级化网络 ： 多层的ISP 
+
+增加存在点(POP)： what： 提供商网络中的一台或多台路由器群组，客户ISP 通过 提供商POP 连接 提供商ISP ，客户ISP通过第三方电信提供商租用高速链路将他的路由器之一直接链接到该POP的一台路由器 
+
+客户ISP可以`多宿`，即选择多个提供商ISP，使一个提供商出现意外后仍能提供服务，为了减少费用(因为ISP支付给供应商的费用反映他通过供应商交换的通信流量)  客户ISP会选择和临近同一等级ISP `对等` ，使他们流量直接连接而不通过上游ISP传输 ，所以第三方公司创建 因特网交换点(IXP)，IXP是一个汇合点，多个ISP能在此对等
+
+内容提供商网络：如谷歌 内容提供商与较低层ISP对等或者在IXP处与他们对等，尝试创建自己的网络，绕过第一层ISP，不过有些接入ISP只能通过第一层连接 所以 内容提供商也与第一层连接 不过仅仅为这些ISP交换的流量付费。
+
+<h2 id='1-4'>分组交换网中的时延，丢包和吞吐量</h2>
+
+#### 分组交换网中的时延概念
+
+分类： 节点处理时延， 排队时延，传输时延，传播时延 
+
+传输时延和传播时延的比较： 传输时延：路由器推出分组所需时间(取决于分组长度和链路传输速率)      传播时延：一个比特从一台路由器传输到另一台路由器所需时间(两台路由器之间距离的函数)
+
+#### 排队延时和丢包
+
+分组到达队列的平均速率(a) ， 传输速率(R)即从队列中推出比特的速率  ， 分组长度 L比特 那么 La/R被称为`流量强度`, 流量强度不能大于1 ，因为不然排队时延会趋于无穷大(比特到达速率超过传输速率)
+
+丢包： 链路有着有限容量，满时，新队列到达时将会被丢弃
+
+#### 端到端时延
+
+Traceroute程序
+
+#### 端系统，应用程序和其他时延
+
+媒体分组化时延： IP语音中(VoIP) ，发送方在向因特网传递分组之前必须首先用编码的数字化语音填充一个分组。这种填充一个分组的时间称之位分组化时延。
+
+#### 计算机网络中的吞吐量
+
+瞬间吞吐量： 接收文件的速率
+
+吞吐量不仅取决于沿着路径的传输速率，也取决与干扰流量(例如 有多个用户同时下载)
+
+<h2 id='1-5'>协议层次及其服务模型</h2>
+
+#### 协议分层
+
+每层通过在该层执行某些动作或使用直接下层的服务来来提供服务
+
+协议栈： 各层的所有协议 ：（由下到上） 1. 物理层 2. 链路层 3. 网络层 4. 运输层 5. 应用层
+```
+1. 应用层 ： 网络应用程序及他们的应用层协议存留的地方
+
+HTTP (web文档的请求和帮助) ，
+SMTP (电子邮件报文的传输) ，
+FTP (端系统之间文件的传送)
+DNS (域名系统)
+
+报文 ： 位于应用层的信息分组
+```
+```
+2. 运输层 : 在应用程序端点之间传送应用层报文
+
+有两种运输协议
+TCP (提供面向连接的服务)
+1. 应用层报文向目的地的确保传递和流量控制 2. 长报文划分为短报文，提供拥塞控制系统(当网络拥塞时，源抑制其传输速率)
+
+UDP (提供无连接服务)
+不提供不必要的服务
+
+报文段：运输层的分组
+```
+```
+3. 网络层 : 负责将数据报的网络层分组从一台主机移动到另一台主机
+
+运输层协议(TCP或UDP)向网络层递交传输层 报文段 和 目的地址
+
+IP (网络协议)，定义了数据报的各个字段 以及 端系统和路由器如何作用与这些字段
+路由选择协议
+
+数据报: 网络层分组
+```
+```
+4. 链路层：为将分组从一个节点(主机或路由器)移动到下一个节点，网络层必须依靠链路层的服务，在这个过程中 网络层将受到来自每个不同链路层协议的不同服务
+
+网络层将数据下传个链路层 链路层沿着路径将数据传递给下一个节点 ，在下个节点 链路层将数据报上传个网络层
+
+以太网,wifi和电缆接入网的DOCSIS协议 
+
+帧：链路层分组
+```
+```
+5. 物理层 ： 将帧中的一个个比特从一个节点移动到下个节点
+
+与该链路的实际传输媒体相关联
+```
+OSI 模型
+```
+相比因特网协议栈多了 表示层 和 会话层
+
+```
+
+#### 封装
+
+链路层交换机： 链路层和物理层
+
+路由器 : 网络层 链路层，物理层   (能识别IP)
+
+一个分组具有两种类型的字段 :首部字段和有效载荷字段 ,首部字段是在该层添加的 ，有效载荷字段一般来自于上一层的分组
+
+<h2 id='1-6'>面对攻击的网络</h2>
+
+#### 将有害程序放入计算机中
+
+`病毒`: 需要某种形式的用户交互来感染用户设备的恶意软件(如 电子邮件附件)
+
+`蠕虫`：无需任意明显用户交互就能进入设备的恶意软件
+
+#### 攻击服务器和网络基础设施
+
+`拒绝服务攻击(DoS)` : 弱点攻击(攻击易受攻击的应用程序或操作系统)  带宽洪泛(发送大量分组，如 分布式DoS)   连接洪泛 (在目标主机 创建大量半开或全开的TCP连接)
+
+#### 嗅探分组
+
+分组嗅探器 ： 记录每个流经的分组副本的被动接收器
+
+#### 伪装成信任对象
+
+<h1 id='2'>应用层</h2>
+
 
 
