第五天 网络

--- a/计算机网络/计算机网络(自顶向下方法).md
+++ b/计算机网络/计算机网络(自顶向下方法).md
@@ -6,6 +6,7 @@
     - [协议层次及其服务模型](#1-5)
     - [面对攻击的网络](#1-6)
 - [应用层](#2)
+    - [应用层协议原理](#2-1)
 
 <h1 id='1'>计算机网络和因特网</h1>
 
@@ -242,5 +243,22 @@ OSI 模型
 
 <h1 id='2'>应用层</h2>
 
+<h2 id='2-1'>应用层协议原理</h2>
 
+#### 网络应用程序体系结构
 
+应用程序体系结构 ：1.  客户 - 服务器 体系结构   2. P2P体系 结构
+```
+客户 - 服务器 体系结构  (例如 搜索引擎 因特网商务 社交网络 基于web的电子邮件)
+what: 有一个总是打开的服务器 服务于来自许多其他称为客户的主机的请求
+特点 ： 1. 客户之间不直接通信 2. 该服务器具有固定的周知的地址
+优点: 安全 性能高 可靠 IP固定能访问
+缺点：对服务器性能要求高  服务提供商要支付互联和宽带费用 
+```
+```
+P2P 体系结构 (例如 文件共享 对等方协助下载器 因特网电话和视频会议)
+what： 对位于数据中心的专用服务器有着最小程度依赖
+特点：  应用程序在客户之间直接通信  服务器被用于追踪用户Ip地址 ，但用户到用户的报文在用户主机间直接传输
+优点：自拓展性 (每个用户为系统增加服务能力)
+缺点:面临安全性 性能 和可靠性的挑战
+```
