--- a/计算机网络/计算机网络(自顶向下方法).md
+++ b/计算机网络/计算机网络(自顶向下方法).md
@@ -9,6 +9,7 @@
     - [应用层协议原理](#2-1)
     - [Web和HTTP](#2-2)
     - [因特网中的电子邮件](#2-3)
+    - [DNS：因特网的目录服务](#2-4)
 
 <h1 id='1'>计算机网络和因特网</h1>
 
@@ -451,6 +452,114 @@ If-Modified-Since: Tue,  18 Aug 2015 15:11:03
 
 <h2 id='2-3'>因特网中的电子邮件</h2>
 
+3个主要部分 ： 用户代理(例如 微软的Outlook )  邮件服务器   简单邮件传输协议(SMTP)
 
+每个接收方或发送方在邮件服务器上有个邮箱
+
+发送过程 ： 发送方的用户代理 到  发送方邮件服务器 通过STMP 传输到接收方邮件服务器 在分发给 接收方的邮箱中
+
+### SMTP
+
+what: 是因特网电子邮件中的主要应用层协议 ，使用TCP传输
+
+限制所有邮件报文的体部分，只能采用简单的7 bit ASCII 表示，即再用SMTP传输邮件之前 ，需要将二进制多媒体数据编码成ASCII码 ，并且在使用SMTP后要求将相应ASCII码解码还原成多媒体数据。而HTTP不需要将多媒体转换为ASCII码
+
+SMTP一般不使用中间邮件服务器发送邮件，如果接收方邮件服务器没有开机，那么报文会保留在发送方邮件服务器上，并等待新的尝试.在几天后仍不成功 删除该报文并通知 发送方
+
+握手过程 ： 1. HELO  2. MAIL FROM 3. RCPT TO 4. DATA (以 . 结束) 5. QUIT 
+
+连续连接直到所有邮件发送完毕只会才发送QUIT，关闭TCP
+
+####  与HTTP的对比
+
+1. 传送文件 ： HTTP 从 web服务器 到 Web客户  ， SMTP是从 邮件服务器 到 邮件服务器
+
+2. 都使用持续连接，HTTP主要为拉协议 ，用户从该服务器拉取信息 ， SMTP为推协议 ，发送邮件服务器把文件推向邮件服务器
+
+3. SMTP要求每个报文使用 7比特 ASCII ，HTTP 无限制
+
+4. 如何处理既包含文本又包含图形  HTTP ：把每个对象封装到它的HTTP报文中  SMTP： 把所以报文对象都放在一个报文中
+
+#### 邮件报文格式
+
+必须包含  From ： 首部行      To ： 首部行
+
+#### 邮件访问协议
+
+因为SMTP为推协议 ，所以接收用户不是通过SMTP获取接收邮件服务器上的报文，而是通过 第三方的邮局协议(POP3) ,因特网邮件访问协议( IMAP )和 HTTP协议
+
+> POP3 ： 1. 特许 2. 事务处理  3. 更新
+
+特许(用户代理发送用户名和口令以鉴别用户)
+
+事务处理 (用户代理取回报文  ，还可以 对报文做删除标记   取消报文删除标记  获取邮件统计信息 )
+```
+list ：获取邮件服务器所有储存的报文的长度
+retr : 获取 报文  (如 retr 1)
+dele ：删除报文 (如  dele 1)
+quit : 退出
+
+会话过程中POP3服务器 不包含状态信息，结束后会保留一些信息 ，如哪些用户报文被标记删除
+```
+跟新 ： (客户发出quit命令后 结束该POP3会话 ，删除被标记为删除的报文)
+
+> IMAP(因特网邮件访问协议)
+
+特点: 1. IMAP服务器维护IMAP会话的用户状态信息(例如 文件夹的名字以及哪些报文和哪些文件夹相关联)
+     2. 具有允许用户代理获取报文某些部分的命令 (例如 获取报文的报文首部，或报文内容的一小部分)，在网速低的时候很有用
+
+操作 ：IMAP 服务器把每个报文 和一个文件夹联系起来  ，一开始存放于INBOX文件夹。 1. 阅读 2. 删除 3. 创建文件夹以及移动邮件 4. 查找邮件
+
+> 基于Web 的电子邮件
+
+用户代理是浏览器 ，即 用户和远程邮箱之间的通信依赖于HTTP (从浏览器发送到他的邮件服务器，依靠HTTP)，但是，邮件服务器和邮件服务器之间还是通过SMTP
+
+<h2 id='2-4'>DNS：因特网的目录服务</h2>
+
+IP地址标识主机 ，主机名也标识主机
+
+### DNS提供的服务
+
+域名系统(DNS)： 进行主机名到IP地址转换的目录
+
+what ： 1. 一个由分层DNS服务器实现的分布式数据库 2. 一个使得主机能够查询分布式数据库的应用层协议
+
+DNS服务器通常运行BIND软件的UNIX机器，DNS协议运行于UDP协议 使用 53 号端口
+
+HTTP请求 URL为 www.aa.com/a.html 时，该主机用户必须获得www.aa.com的IP地址，步骤如下
+```
+1. 浏览器从URL抽离 www.aa.com 将其发送给DNS应用的客户端
+2. DNS应用的客户端向DNS服务器发送包含该主机名的请求
+3. DNS客户最终会收到一份回答报文，其中还有对应的IP地址，DNS发送给浏览器
+4. 浏览器接收到该IP地址以后，向该IP地址的80端口的HTTP服务器进程发起一个TCP连接
+```
+DNS服务
+```
+1. 主机名到IP的转换
+2. 主机别名 (一台主机可能有多个别名 ，有一个规范主机名) ，DNS获取规范主机名和相应IP
+3. 邮件服务器别名，MX
+4. 负载分配 ( 一个IP地址集合 可能与一个规范主机名相联系 )，当用户访问主机时 ，DNS选择冗余的主机进行访问，而不是选择繁忙主机
+```
+#### DNS的工作原理
+
+DNS由分布于全球的大量DNS服务器和定义了DNS服务器与查询主机通信方式的应用层协议组成
+
+特点 ：1. 分布式，层次数据库 2. DNS缓存
+
+> 分层式，层次数据库 
+
+分3层 ： 1. 根DNS服务器 2. 顶级域DNS服务器（ TLD ） (例如 com DNS服务器 edu DNS服务器) 3. 权威DNS服务器 (例如 amazon.com DNS 服务器)
+
+另外重要的DNS服务器是 本地DNS服务器 ( 每个ISP有一个本地DNS服务器 )，用户发送DNS请求时 是发往本地DNS服务器，起着代理作用
+
+请求主机到本地DNS服务器是递归查询 ，本地DNS服务器到其他都是迭代查询 ( 获得IP后之间返回给本地DNS )
+```
+1.请求主机请求某个主机名 到本地DNS     2. 本地DNS到根DNS    3. 根返回顶级域IP到本地    4. 本地到顶级域     5. 顶级域返回 权威IP到本地      6. 本地到权威       7. 权威返回请求的主机名对应IP到本地     8. 本地返回对应IP到请求主机
+```
+> DNS缓存
+
+每次其他DNS返回DNS回答(包括某主机名到IP的映射)都被本地DNS服务器记录 过一段时间后会丢弃该缓存数据
+
+### DNS记录和报文
 
 
