第10天 网络HTTP实验

--- a/计算机网络/计算机网络(自顶向下方法).md
+++ b/计算机网络/计算机网络(自顶向下方法).md
@@ -13,6 +13,8 @@
     - [P2P文件分发](#2-5)
     - [视频流和内容分发网](#2-6)
     - [套接字编程:生成网络应用](#2-7)
+- [运输层](#3)
+    - [概述和运输层服务](#3-1)
 
 <h1 id='1'>计算机网络和因特网</h1>
 
@@ -767,4 +769,31 @@ while True:
     connectionSocket.close()# 关闭connectionSocket套接字
 
 ```
+
+<h1 id='3'>运输层</h1>
+
+该层为运行在不同主机上的应用进程提供直接的通信服务起着至关重要的作用(主要为TCP和UDP)
+
+关注问题：1. 将网络层的两个端系统之间交付服务扩展到云在两个不同端系统上应用层进程直接的交付服务 2. 怎样在一种会丢失会损坏数据的媒体上可靠的通信 3. 拥塞控住
+
+<h2 id='3-1'>概述和运输层服务</h2>
+
+### 概述和运输层服务
+
+运输层协议为运行在不同主机上的应用进程之间提供了**逻辑通信**
+
+运输层协议在端系统中实现而不是在路由器中，路由器仅作用于数据报的网络层字段，不检查封装在数据报中的运输层报文段字段
+
+#### 运输层和网络层的关系
+
+网络层提供主机之间的逻辑通信，运输层协议为运行在不同主机上的应用进程之间提供了逻辑通信。(邮政体系)
+
+运输层协议只工作在端系统中，将应用层报文移动到网络层。 运输层协议能提供的服务常常受制于网络层协议的服务模型
+
+即使底层网络层不可靠，但是运输层也能为应用程序提供可靠的数据传输服务和安全性保证
+
+#### 因特网运输层概述
+
+
+
 
