--- a/计算机网络/计算机网络(自顶向下方法).md
+++ b/计算机网络/计算机网络(自顶向下方法).md
@@ -15,6 +15,9 @@
     - [套接字编程:生成网络应用](#2-7)
 - [运输层](#3)
     - [概述和运输层服务](#3-1)
+    - [多路复用和多路分解](#3-2)
+    - [无连接运输:UDP](#3-3)
+    - [可靠数据传输原理](#3-4)
 
 <h1 id='1'>计算机网络和因特网</h1>
 
@@ -304,19 +307,19 @@ what： 发送进程能够向接收进程交付比特的速率
 
 带宽敏感应用 ，对吞吐量高要求 (如 多媒体应用 视频电话)   弹性应用 (如 电子邮件等)
 
-#### 定时
+#### `定时`
 
 时延
 
-#### 安全性
+#### `安全性`
 
 加密数据
 
-### 因特网提供的运输服务
+### `因特网提供的运输服务`
 
 UDP和TCP
 
-#### TCP
+#### `TCP`
 
 提供 面向连接服务和 可靠数据传输
 
@@ -329,7 +332,7 @@ UDP和TCP
 
 用SSL(TCP的加强)来提高安全性 ，在应用层实现
 
-#### UDP
+#### `UDP`
 
 仅提供最小服务 (因特网电话 因为能容忍某些丢失但对速度有要求)
 
@@ -677,11 +680,11 @@ CDN得知LDNS的IP，为该IP选择合适集群。 方法 1. 地理上最邻近 
 
 #### 例子
 
-Netflix ： 仅分发视频，所以不需要DNS重定向操作 ，Netflix软件直接告示客户要连接哪一台CDN服务器，且Netflix使用推高速缓存，而不是拉高速缓存， 内容在非高峰时段的预定时间被推入服务器
+`Netflix` ： 仅分发视频，所以不需要DNS重定向操作 ，Netflix软件直接告示客户要连接哪一台CDN服务器，且Netflix使用推高速缓存，而不是拉高速缓存， 内容在非高峰时段的预定时间被推入服务器
 
-YouTube： 使用专用CDN 已经在几百个IXP和ISP位置安装了服务器集群。使用 拉高速缓存和DNS重定向 ，集群选择策略是使得客户和集群之间RTT(往返时间)最低。没有应用适应性流，需要用户人工选择。为了节省哪些将被重定向或提前终止而浪费的带宽和服务器资源，YouTUbe 在获取视频目标量，使用HTTP字节范围请求来限制传输的数据流
+`YouTube`： 使用专用CDN 已经在几百个IXP和ISP位置安装了服务器集群。使用 拉高速缓存和DNS重定向 ，集群选择策略是使得客户和集群之间RTT(往返时间)最低。没有应用适应性流，需要用户人工选择。为了节省哪些将被重定向或提前终止而浪费的带宽和服务器资源，YouTUbe 在获取视频目标量，使用HTTP字节范围请求来限制传输的数据流
 
-迅雷看看： P2P流式视频 ，一个对等方要看一个视频时，它联系一个追踪器，以发现在系统中具有该视频副本的其他对等方。这个请求的对等方则并行的从具有该文件的其他对等方请求该视频的块。不过请求被优先播给那些即将播放的块(而不是稀缺块),以确保连续播放。CDN服务器在流式视频启动阶段起主要作用，当P2P总流量满足视频播放时，该客户将从CDN停止流并仅从对等方获得流 。但如果P2P流量不足，该客户将重新启动CDN连接返回混合CDN-P2P流模式     (确保短启动延迟，于此同时最小的依赖于成本高的基础设施服务器和带宽)
+`迅雷看看`： P2P流式视频 ，一个对等方要看一个视频时，它联系一个追踪器，以发现在系统中具有该视频副本的其他对等方。这个请求的对等方则并行的从具有该文件的其他对等方请求该视频的块。不过请求被优先播给那些即将播放的块(而不是稀缺块),以确保连续播放。CDN服务器在流式视频启动阶段起主要作用，当P2P总流量满足视频播放时，该客户将从CDN停止流并仅从对等方获得流 。但如果P2P流量不足，该客户将重新启动CDN连接返回混合CDN-P2P流模式     (确保短启动延迟，于此同时最小的依赖于成本高的基础设施服务器和带宽)
 
 <h2 id='2-7'>套接字编程:生成网络应用</h2>
 
@@ -794,6 +797,163 @@ while True:
 
 #### 因特网运输层概述
 
+UDP(用户数据报协议)  TCP(传输控制协议)
 
+`网际协议(IP)`的服务模型是 尽力而为交付服务，但他不做任何保证(不确保报文段交付，不保证报文段按序交付，不保证报文段数据完整性),是不可靠服务。
 
+UDP和TCP的将主机交付拓展为进程间交付称为 运输层的多路复用与多路分解
+
+`UDP和TCP 最低限度服务`(也是UDP仅有的服务) ：1. 进程到进程间的数据交付 2. 差错检查( 通过在其报文段首部的 差错检测字段 提供完整性检查)
+
+UDP也是不可靠服务，不保证完整交付 ，TCP是可靠的数据传输，通过 流量控制，序号，确认，定时器来保证数据 正确，按序和完整 ，还提供拥塞控制(防止任何一条TCP占用过多流量)
+
+<h2 id='3-2'>多路复用和多路分解</h2>
+
+运输层是通过`套接字端口`和应用进程传递数据的。
+
+`多路分解` : 将运输层报文段中的数据交付到正确的套接字。 `多路复用`:源主机从不同套接字中收集数据块，为每个数据块封装上首部信息(用于之后的分解)，从而生成报文段，然后将报文段发送给网络层
+
+运输层多层复用要求：1. 套接字有唯一标识符  2. 每个报文段有特殊字符( 源端口号字段和目的端口号 )来指示该报文段所要交付到的套接字
+
+端口号是16比特的数(0 - 65535 )，(0 - 1023) 范围的是周知端口号
+
+### 无连接的多路复用和多路分解(UDP)
+
+一般客户套接字是由运输层自动分配，服务器套接字会指定关联一个特殊端口号
+```python
+clientSocket = socket(AF_INET,SOCK_DGRAM) # 创建客户的套接字，称为clientSocket，
+
+serverSocket.bind(('',serverPort)) # 将端口号12000与该服务器的套接字serverSocket相连
+```
+
+UDP套接字是由一个包含 目的IP地址 和 目的端口号 的`二元组`全面标识的。两个不同的报文段有着相同目的IP地址 和 目的端口号会被定向到相同目的进程
+
+源端口号可以用作返回地址的一部分，服务器向客户返回报文段
+
+### 面向连接的多路复用与多路分解(TCP)
+
+TCP套接字是由一个`四元组`标识( 源IP地址， 源端口号，目的IP地址，目的端口号)，即使是同一条电脑，请求的IP地址和目的端口相同，如果两个请求的源端口号不同也会定向为两个不同TCP
+
+TCP客户发出创建套接字并发出请求，先达到目的 欢迎套接字，然后服务器进程用 四元组 创建新的套接字，TCP连接完成，所有后续到达的报文段如果携带数据和四元组匹配则分配到该套接字
+
+客户接收到的返回数据目的端口号应该已经指向连接套接字而不是欢迎套接字，所以客户以后传输的数据目的端口号应该和连接端口号匹配
+
+#### web服务器和TCP
+
+如今高性能web服务器通常只使用一个进程，但未每个新的客户创建一个具有新连接套接字的新`线程`(线程可以看作是一个轻量级的子进程) 
+
+非持续HTTP：套接字的频繁创建和关闭会严重影响服务器性能
+
+<h2 id='3-3'>无连接运输:UDP</h2>
+
+在发送报文段之前，发送方和接收方的运输层实体之间没有握手，即无连接
+
+`UDP优点` ：1. 关于发送什么数据以及何时发送的应用层控制更为精细。(数据一传给UDP，立刻打包发送且不存在拥塞控制) 2. 无须建立连接(没有建立连接的时延) 3. 无连接状态(UDP服务器不维护连接状态能支持更多客户) 4. 分组首部开销小(TCP报文段20字节首部开销，UDP8字节)
+
+DNS就是运行在UDP上的
+
+UDP也可实现可靠传输例如(谷歌Chrome的QUIC协议)，在应用层协议中实现可靠性
+
+UDP运行多媒体时可能出现的问题： 每个人都看高比特率视频但是都没有拥塞系统，可能会导致路由器的大量分组溢出，UDP发送方和接收方存在高丢包率且，网络拥挤会导致TCP连接的速率也很慢(因为TCP存在拥塞控制，会降低速率)
+
+#### UDP报文段结构
+
+首部(源端口号 目的端口号 长度(首部+数据的字节数) 检验和 ) 和应用数据(报文) 。
+
+首部共8字节，每个两字节。检验和 可以用来检查该报文段是否存在差错
+
+#### 检验和
+
+提供了差错检测功能。检验和是报文段中的所有16比特字的和 对这个和进行反码运算得到的 ( 求和中遇到任何溢出会被回卷(溢出部分加到尾部) )，所以 所有16比特字 和 检验和 的和 为16比特的 1 
+```
+以 3比特为例子  有两个3比特字为 100 和 100 ，那么得到他们的和为 001  检验和为 110
+
+检验和 和 100 和 100 的和 为 111(回卷后)
+```
+但是检验和只能只能监测是否出错，不能进行差错恢复 ，一般要么丢弃受损报文段，要么将受损报文段返回给应用程序并提出警告
+
+为什么提供： 因为在既无法确保链路的可靠性，又无法确保内存中的差错检查情况下，如果端到端数据要通过差错检测，UDP必须在端到端基础上正在运输层提供操作,`端到端原则`(某些功能必须基于端到端实现)
+
+<h2 id='3-4'>可靠数据传输原理</h2>
+
+可靠数据传输协议(例如 TCP) : 数据确保到达 数据按序到达 数据完整不丢失
+
+可靠数据传输协议的下层协议可能是不可靠的，例如 TCP的下层协议 IP 不可靠
+
+rdt 代表可靠  udt 代表不可靠
+
+> 上层 通过调用 red_send() 调用数据发送方，发送端通过 udt_send() 发送分组， 在通过不可靠信道后，接收端通过rdt_rcv()接收，通过deliver_data() 向上交付数据
+
+#### `构造可靠数据传输协议`
+
+> 版本一 : 经完全可信信道的可靠数据传输 (无差错，按序接收)
+
+有限状态机(FSM),定义了主机的操作
+
+rdt 发送端只通过 red_send(data)事件 接收较高层数据，产生包含该数据的分组(经由 packet = make_pkt(data) )，并将分组发送到信道中(udt_send(packet) ) ,red_send(data)事件由较高层应用的过程调用产生
+
+rdt 接收端 通过 rdt_rcv(packet)事件 接收分组，从分组取出数据( extract(packet,data) ) ,在上传到较高层 (deliver_data(data) ) ， rdt_rcv(packet)事件由较低层协议的过程调用产生
+
+接收方不需要提供任何反馈信息给发送方，因为没有差错
+
+> 版本二： 经具有比特差错信道的可靠数据传输 (虽然会有差错但是还是按序接收且不丢失分组
+)
+
+在分组的传输，传播或缓存过程中出现比特差错 (经常出现于物理部件中)
+
+自动重传请求(ARQ)： 基于重传机制的可靠数据传输协议
+
+`ARQ协议功能` ：1. 差错检测(例如 检验和字段) 2. 接收方反馈(接收方反馈一个ACK或NCK，表示信息是否正确) 3. 重传(信息不正确，发送方重传该分组文)
+
+停留协议： 发送方在确认接收方已经正确接收当前分组前不会发生新的数据
+
+`接收方反馈过程中可能出错`，how： 发送方收到含糊不清的NCK或ACK分组时，重传当前数据分组(即 引入 冗余分组)
+
+`接收方不知道重传的数据分组是旧的还是新的`，how ： 对数据分组进行编号，添加序号字段，(对于停留协议，只需要 0 或 1 即可)
+
+`检验和，序号，ACK分组和重传`
+
+> 版本三 经具有比特差错的丢包信道的可靠数据传输
+
+因为数据分组可能会丢失，我们需要 倒计时定时器(发送方) : 1. 每次发送一个分组便启动一个定时器 2. 响应定时器中断 3.终止定时器
+
+因为分组序号在 0 和 1 之间交替 ，称为比特交替协议 
+
+> 总结 `比特交替协议`
+
+传输内容是否存在差错 ： 检验和 
+
+分组丢失后重传分组 ： 倒计时定时器(发送方)
+
+发送方如何知道接收方接收的是正确的 ： ACK分组
+
+接收方不知道重传的数据分组是旧的还是新的： 分组序号(在 0 和 1 之间交替)
+
+停留协议 ：发送方在确认接收方已经正确接收当前分组前不会发生新的数据
+
+### 流水线可靠数据传输协议
+
+停留协议的`信道利用率`很低，性能不高。所以我们需要不以停等的方式，运行发送方发送多个分组而无需等待确认
+
+不同: 1. 增加序号范围，每个运输中的分组都得有唯一序号 2. 协议的发送方和接收方要缓存更多分组(发送方至少要缓存已发送但没有确认的分组 ， 接收方缓存已正确接收的分组 ) 
+
+流水线差错恢复 方法 ： 1. 回退N步(GBN)  2. 选择重传(SR)
+
+### 回退N步(GBN) ：滑动窗口协议
+
+what：允许发送方发送多个分组无需等待，但且限于流水线中未确认分组数不超过N
+
+基序号(base): 最早为确认分组的序号  下一个序号(nextseqnum):最小的未使用序号
+
+[0,base-1]: 已发送已确认 [base,nextseqnum-1]:已发送未确认 [nextseqnum,base+N-1]：立即要被发送   [base+N, ] ： 不能发送
+
+流量控制是对发送方施加限制的原因之一
+
+GBN发送方必须响应3种类型事件： 1. ``上层的调用。`( 调用rdt_send()时，先看发送窗口满没满，没满则发送并更新变量 ，满了 要么缓存，要么使用同步机制，确保上层只有不满时才能调用rdt_send)  2.`收到一个ACK`。在GBN协议中，采用累积确认，收到序号为n的ACK，说明之前的所有分组也都被接收。   3. `超时事件`： 出现丢失或时延过长  发送方**重传所有已发送但未确认的分组**，定时器为最早已发送但未确认分组所使用的定时器。且收到ACK，如果仍有已发送但为确认分组，重启定时器，如果没有，停止定时器
+
+**在GBN协议中，接收方丢弃所有失序分组** ,所有接收方只要维护一个 下一个按序接收的分组序号即可 ，接收缓存简单。
+
+基于事件的编程：每个过程实现了在响应各种可能出现的时间时采取的动作 。比如 在发送方：1.上传实体调用rdt_send  2.定时器中断 3， 报文到达时，下层调用 rdt_rcv 
+
+### 选择重传
 
