--- a/学习计划.md
+++ b/学习计划.md
@@ -51,4 +51,4 @@ linux 鸟叔的linux私房菜
 
 最近的计划是先看了c++ prime 和 计算机网络 期间无聊的话看几道剑指offer或牛客网真题 ，其他的先放到后面做
 
-到21为止，最低c++第二部分看完(100页)，网络运输层看完(40页)
+到21为止，最低c++第二部分看完(100页)，网络运输层看完(40页)d
