--- a/学习计划.md
+++ b/学习计划.md
@@ -5,6 +5,8 @@
 
 ## c++ 
 
+> 看了半本 C++ primer
+
 ## 操作系统
 
 ### linux
@@ -13,7 +15,7 @@
 
 ## 计算机网络
 
-> 看了本TCP/IP网络编程 稍微会了点
+> 看了本TCP/IP网络编程和半本自顶向下 稍微会了点
 
 
 ## 数据结构和算法
@@ -27,13 +29,13 @@
 
 # 目标
 
-1. c++ prime 先大致过一遍
+1. c++ prime 先大致过一遍 (看了一半了)
 
 2. 牛客网和剑指offer上的题 笔试题什么的刷一点 而且通过牛客网 了解一下
-面试经历 要求有的技能
+面试经历 要求有的技能  (还没开始刷题)
 
 
-3. 数据库  计算机网络 通过视频和书学习一点 到时候也可以问一下别人怎么学具体
+3. 数据库  计算机网络 通过视频和书学习一点 到时候也可以问一下别人怎么学具体 (计算机网络还差本高性能，不过现在也只是稍微了解一些，记忆很浅，理解的也很浅  ，数据库还没开始)
 
 4. 熟练使用linux
 
@@ -49,6 +51,4 @@ leetcode/剑指offer题目 每天看3题
 
 linux 鸟叔的linux私房菜
 
-最近的计划是先看了c++ prime 和 计算机网络 期间无聊的话看几道剑指offer或牛客网真题 ，其他的先放到后面做
-
-到21为止，最低c++第二部分看完(100页)，网络运输层看完(40页)d
+最近的计划是先看下面经，然后先复习下TCP/IP ，在学习一下高性能那本书，c++每天看几页吧。主要以面经为主，先找到题目，然后训练。
