--- a/数据结构和算法/剑指office/从尾到头打印链表.md
+++ b/数据结构和算法/剑指office/从尾到头打印链表.md
@@ -4,3 +4,34 @@
 ## 思路
 
 用栈存储或者递归输出
+
+```c++
+/**
+*  struct ListNode {
+*        int val;
+*        struct ListNode *next;
+*        ListNode(int x) :
+*              val(x), next(NULL) {
+*        }
+*  };
+*/
+class Solution {
+public:
+    vector<int> printListFromTailToHead(ListNode* head) {
+        stack<int> s;
+        vector<int> ArrayList;
+        while(head!=nullptr)
+        {
+            s.push(head->val);
+            head=head->next;
+        }
+        while(!s.empty())
+        {
+            int p=s.top();
+            s.pop();
+             ArrayList.push_back(p);
+        }
+        return ArrayList;
+    }
+};
+```
