--- a/学习计划.md
+++ b/学习计划.md
@@ -52,3 +52,14 @@ leetcode/剑指offer题目 每天看3题
 linux 鸟叔的linux私房菜
 
 最近的计划是先看下面经，然后先复习下TCP/IP ，在学习一下高性能那本书，c++每天看几页吧。主要以面经为主，先找到题目，然后训练。
+
+
+
+
+
+2019.3.3  
+
+目前计划 :  准备找工作  ，要做的工作 
+
+1. 刷剑指office
+2. 将面经上的问题都弄懂
