--- a/学习进度.md
+++ b/学习进度.md
@@ -2,7 +2,7 @@
 
 ## 3月
 
-3号 ：
+**3号 ：**
 
 9点30到工作室 ，昨天晚上没睡好 2点睡的，到工作室后精神不是很好，效率很低基本只刷了2，3题的剑指office
 
@@ -12,9 +12,25 @@
 
 7点开始做题
 
-
+发现自己写代码的能力变弱了，敲的没那么快，而且有时候经常迷糊。想出的思路可能比较麻烦，没那么简洁
 
 ---
+
+**4号**
+
+10.17到工作室，昨天1点睡
+
+12.09吃完饭，只刷了2题。。
+
+ 
+
+到20.30为止共刷了 10题
+
+---
+
+
+
+
 
 
 
