--- a/数据结构和算法/剑指office/二叉树中和为某一值的路径.md
+++ b/数据结构和算法/剑指office/二叉树中和为某一值的路径.md
@@ -34,6 +34,8 @@ public:
     vector<vector<int> > FindPath(TreeNode* root,int expectNumber) {
         if(root==nullptr) return v;
         aa(root,expectNumber,0);
+        // sort排序，后面是匿名函数
+        sort(v.begin(),v.end(),[](const vector<int> &a,const vector<int> &b)->bool{return a.size()>b.size();});
         return v;
     }
 };
