--- a/学习进度.md
+++ b/学习进度.md
@@ -50,3 +50,15 @@
 
 
 
+7号面了腾讯一面，12点在吃饭，告诉我3.30要面试， 问题答的还行，手撕代码做的不行，太紧张了 ，应该先写出最简单的方法，再找有没有更优的办法，最后凉了 
+
+
+
+---
+
+**8号**
+
+今天写题目的效率还行，明天保持
+
+中午帮贺鹏程他进行了面试
+
