--- a/数据结构和算法/剑指office/二叉树的下一个节点.md
+++ b/数据结构和算法/剑指office/二叉树的下一个节点.md
@@ -74,3 +74,40 @@ int main()
 }
 
 ```
+
+```c++
+
+/*
+struct TreeLinkNode {
+    int val;
+    struct TreeLinkNode *left;
+    struct TreeLinkNode *right;
+    struct TreeLinkNode *next;
+    TreeLinkNode(int x) :val(x), left(NULL), right(NULL), next(NULL) {
+        
+    }
+};
+*/
+class Solution {
+public:
+    TreeLinkNode* GetNext(TreeLinkNode* pNode)
+    {
+        TreeLinkNode* p=pNode;
+        if(pNode==nullptr) return nullptr;
+        if(p->right!=nullptr)
+        {
+            p=p->right;
+            while(p->left!=nullptr)
+                p=p->left;
+            return p;
+        }
+        if(p->next==nullptr) return nullptr;
+        while(p->next->left!=p)
+        {
+            p=p->next;
+            if(p->next==nullptr) return nullptr;
+        }
+        return p->next;
+    }
+};
+```
