--- a/面试真题/吉比特突击.md
+++ b/面试真题/吉比特突击.md
@@ -4,7 +4,7 @@
 
    - 代码区：加载可执行文件代码段
    - 初始化/静态数据区(static)：可执行文件数据段，生存周期为整个程序运行过程，全局变量
-   - 未初始化数据区(BSS)：未初始化的全局变量
+   - 未初始化数据区(BSS)：未初始化的全局变量，和未初始化的静态变量
    - 堆(heap)区：用于动态内存分配，由程序猿自己分配，程序结束时os会销毁
    - 栈(stack)区：由编译器自动分配，存放函数参数值，返回值，局部变量等
 
