--- a/学习计划.md
+++ b/学习计划.md
@@ -64,3 +64,18 @@ linux 鸟叔的linux私房菜
 1. 刷剑指office
 2. 将面经上的问题都弄懂
 
+
+
+
+
+2019.3.16
+
+最近有些迷茫，感觉自己不会的很多，而且很多会的可能理解没那么深，很容易就遗忘了 ，所以应该更深入的学习。
+
+最近的c++方面可以先不学了，毕竟最主要的大致明白，面经上遇到不明白的问题时，再去解决。
+
+而最近的重点还是网络和操作系统 ，以及每天晚上记得刷leetcode面试题，提高自己代码能力
+
+面试题 -> 网络 ，操作系统   ，leetcode这样
+
+输入 ( 看书学习 )    -------  考试 ( 看面试题 )   ---------  输出 (  正确答案 )
