--- a/面试真题/头条面经收集.md
+++ b/面试真题/头条面经收集.md
@@ -325,21 +325,174 @@ B+ 树的优点在于：
 ### NetWork题⽬ 
 
 1. 从输⼊⽹址到关闭窗口发⽣了什么 
+
+   答：输入网址相当于发送http请求，会先通过dns将域名转化为IP，然后向目标IP发送http请求报文，http是用tcp作为运输协议的，所以会经过三次握手。 
+
+   - 建立起客户机和服务器连接。
+   - 建立连接后，客户机发送一个请求给服务器。
+   - 服务器收到请求给予响应信息。
+   - 客户端浏览器将返回的内容解析并呈现，断开连接
+
+   http连接有两种，一种是非持续连接 ，一种是持续连接
+
+   非持续连接，每次进行一次HTTP通信都会建立新的TCP连接 
+
+   持续连接，建立一次tcp就能进行多次http，不过可能会长时间占用服务器资源，降低吞吐量
+
+   比如 页面上有图片，那么得到的html文件会有对图片的引用，我们需要对每个图片进行http请求，非持续就得建立多个tcp连接，而持续只需要建立一个
+
+   而且http是无状态协议，如果我们得用cookie标识用户，Cookie是客户端保持状态的方法
+
+   cookie有四个组件
+
+   - http请求报文中的cookie首部行
+   - http响应报文中的cookie首部行
+   - 客户端系统中保存一个cookie，由浏览器管理
+   - 服务器后端数据库存储一个cookie
+
+   
+
 2. tcp 连接之前具体发⽣了什么,TCP如何保障可靠性传输 
+
+   **三次握手**
+
+   - 第一次：客户端发含SYN位，SEQ_NUM = S的包到服务器。（客 -> SYN_SEND）
+   - 第二次：服务器发含ACK，SYN位且ACK_NUM = S + 1，SEQ_NUM = P的包到客户机。（服 -> SYN_RECV）
+   - 第三次：客户机发送含ACK位，ACK_NUM = P + 1的包到服务器。（客 -> ESTABLISH，服 -> ESTABLISH）
+
+   **保证可靠性**
+
+   - 建立连接（标志位）：通信前确认通信实体存在。
+   - 序号机制（序号、确认号）：确保了数据是按序、完整到达。
+   - 数据校验（校验和）：CRC校验全部数据。
+   - 超时重传（定时器）：保证因链路故障未能到达数据能够被多次重发。
+   - 窗口机制（窗口）：提供流量控制，避免过量发送。
+   - 拥塞控制：同上。
+
 3. 四次挥⼿，为什么是四次 
+
+   TCP是双工的，所以发送方和接收方都需要FIN和ACK。服务器会先把没传完的数据先传完CLOSE_WAIT状态
+
 4. 三次握⼿，为什么是三次,TCP连接的本质,为什么要有 time_wait
+
+   因为防止已经失效的TCP连接请求又到达服务器端，造成服务器端资源浪费
+
+   TIME_WAIT是为了确保服务器端接收到客户端发送的确认ACK
+
 5. TCP 的拥塞控制 
+
+   慢启动，拥塞避免，快速恢复三个步骤
+
+   **慢启动**是将拥塞窗口cwnd设置为1MSS，然后每收到一个确认报文都增长1个MSS，所以慢启动是指数增长的。慢启动有三个停止的方法 ① 存在由超时指示的丢包，cwdn置为1，重新开始慢启动
+
+   ② cwnd超过慢启动阈值，进入拥塞避免③ 由3个冗余ACK指示的丢包，先快速重传，然后进入快速恢复，cwnd变为原来一半，进入拥塞避免
+
+   **拥塞避免**是慢启动有一个满启动阈值，当拥塞窗口大于这个阈值时，进入拥塞避免，拥塞避免是线性增长，每个RTT( 连接返回时间 )增长1MSS
+
+   **快速恢复** 拥塞窗口变为原来一半，进入拥塞避免
+
 6. 讲⼀下 CDN 
-7. cookie⽤来做什么的 
-8. http协议是什么，和tcp什么关系？ 
-9. UDP了解过？和TCP区别？建不建连接是指的什么 
-10. osi七层模型
-11. 滑动窗口和TCP流量控制 
-12. 如果滑动窗口为0，则怎么办
-13. DNS解析过程 
-14. ⽹络层都有哪些协议，区别是什么，各⾃是做什么的 .
-15. 数据链路层都有哪些协议，区别是什么，各⾃是做什么的
-16. tcp状态
+
+    CDN是内容分发网，管理分布在多个地理位置上的服务器，在服务器上存储内容。用户请求内容时，会从信号最好的服务器拉取，如果该服务器没有用户请求的资源，会从其他服务器上拉取，然后存储其副本，他会删除不经常请求的内容
+
+   **CDN通过DNS来截取和重定向请求**，使用户获得最好的体验。这时权威dns服务器不是返回IP而是返回CDN域的主机名，通过这样进入CDN专用的DNS基础设施，最后返回信号最好的服务器IP
+
+   **至于怎么选择那个最优的服务器**,通过集群选择策略，最简单的策略是选取地理上最近的，还有就是CND周期性对集群和客户之间的时延和丢包性能进行实时测量
+
+   不过因为建造基础设施成本很高，也有CDN-P2P流式系统，会向有这个视频副本的对等方请求该视频的块，不过和p2p下载 不同最先请求的是即将播放的块确保连续播放。如果流量不够还是得启动CND连接
+
+7. P2P文件分发
+
+   因为服务器得想每个客户端发送相同的文件，对服务器压力很大。而p2p允许每个对等方向任何其他对等方重新分发它已经收到的该文件的任何内容。通过追踪器( 注册，周期通知追踪器自己还在)知道那些对等方还在集合中。
+
+   一个内容会分成很多块，**请求哪些块**： 最稀缺的那些，可以维持所有块数量大致相等
+
+   **回应哪些主机的请求**： 对提供给他数据的速度最快的给其优先权，确认4个，然后每过一段时间随机选一个主机给予数据。(可以让对等方都以趋向于找到彼此的协调速率上载)
+
+8. cookie⽤来做什么的 
+
+   答：因为http是无状态协议，所以需要cookie来标识用户
+
+9. http协议是什么，和tcp什么关系？ 
+
+   答：http协议是超文本传输协议 ，http协议是依赖于tcp协议实现的，选择tcp协议为他的支撑运输协议
+
+    **请求报文**
+
+   请求行 ( 方法 ， uri ，版本 ) 方法 : get ，head ，post ，put，delete
+
+   首部行
+
+   ![](./图片/http请求报文.png)
+
+   **响应报文**
+
+   状态行 ( 版本 状态码  短语)
+
+   首部行
+
+   ![](./图片/http响应报文.png)
+
+   状态码： 
+
+   - 200：成功。
+   - 301：内容已经移动。
+   - 400：请求不能被服务器理解。
+   - 403：无权访问该文件。
+   - 404：不能找到请求文件。
+   - 500：服务器内部错误。
+   - 501：服务器不支持请求的方法。
+   - 505：服务器不支持请求的版本。
+
+10. UDP了解过？和TCP区别？建不建连接是指的什么 
+
+   UDP是无连接的，可以广播和多播，不保证数据可靠传输，首部8字节，无拥塞控制，面向报文
+
+   TCP是点到点的全双工连接，保证数据可靠，按序到达，首部20字节，有拥塞控制，面向字节流
+
+   建立连接双方可以进行进行数据交换，且数据保证准确
+
+11. osi七层模型
+
+    ![](./图片/计算机经网络体系结构.png)
+
+12. 滑动窗口和TCP流量控制 
+
+    滑动窗口大小一般取决于接收方返回TCP报文段中的窗口大小字段控制，而且滑动窗口必须小于序列空间大小的一半，不然分不清是之前的无效数据还是新数据
+
+    - 目的是接收方通过TCP头窗口字段告知发送方本方可接收的最大数据量，用以解决发送速率过快导致接收方不能接收的问题。所以流量控制是点对点控制。
+    - TCP是双工协议，双方可以同时通信，所以发送方接收方各自维护一个发送窗和接收窗。
+      - 发送窗：用来限制发送方可以发送的数据大小，其中发送窗口的大小由接收端返回的TCP报文段中窗口字段来控制，接收方通过此字段告知发送方自己的缓冲（受系统、硬件等限制）大小。
+      - 接收窗：用来标记可以接收的数据大小。
+    - TCP是流数据，发送出去的数据流可以被分为以下四部分：已发送且被确认部分 | 已发送未被确认部分 | 未发送但可发送部分 | 不可发送部分，其中发送窗 = 已发送未确认部分 + 未发但可发送部分。接收到的数据流可分为：已接收 | 未接收但准备接收 | 未接收不准备接收。接收窗 = 未接收但准备接收部分。
+    - 发送窗内数据只有当接收到接收端某段发送数据的ACK响应时才移动发送窗，左边缘紧贴刚被确认的数据。接收窗也只有接收到数据且最左侧连续时才移动接收窗口。
+
+13. 如果滑动窗口为0，则怎么办
+
+    当被告知接收窗口为0后，发送方不能再发送了，它会定期的发送窗口探寻，直到窗口不为0，或者定时器过期，关闭TCP连接
+
+14. DNS解析过程 
+
+    主机询问本地dns服务器是否存在该域名，如果不存在，那么本地服务器会访问根dns，根dns返回顶级dns的IP，本地dns访问顶级dns，返回权威dns的IP，本地dns访问权威dns，dns返回对应IP，本地将IP返回给主机
+
+15. ⽹络层都有哪些协议，区别是什么，各⾃是做什么的 .
+
+16. 数据链路层都有哪些协议，区别是什么，各⾃是做什么的
+
+17. tcp状态
+
+    - CLOSED：初始状态。
+    - LISTEN：服务器处于监听状态。
+    - SYN_SEND：客户端socket执行CONNECT连接，发送SYN包，进入此状态。
+    - SYN_RECV：服务端收到SYN包并发送服务端SYN包，进入此状态。
+    - ESTABLISH：表示连接建立。客户端发送了最后一个ACK包后进入此状态，服务端接收到ACK包后进入此状态。
+    - FIN_WAIT_1：终止连接的一方（通常是客户机）发送了FIN报文后进入。等待对方FIN。
+    - CLOSE_WAIT：（假设服务器）接收到客户机FIN包之后等待关闭的阶段。在接收到对方的FIN包之后，自然是需要立即回复ACK包的，表示已经知道断开请求。但是本方是否立即断开连接（发送FIN包）取决于是否还有数据需要发送给客户端，若有，则在发送FIN包之前均为此状态。
+    - FIN_WAIT_2：此时是半连接状态，即有一方要求关闭连接，等待另一方关闭。客户端接收到服务器的ACK包，但并没有立即接收到服务端的FIN包，进入FIN_WAIT_2状态。
+    - LAST_ACK：服务端发动最后的FIN包，等待最后的客户端ACK响应，进入此状态。
+    - TIME_WAIT：客户端收到服务端的FIN包，并立即发出ACK包做最后的确认，在此之后的2MSL时间称为TIME_WAIT状态。
+
+18. 
 
 
 
