--- a/面试真题/头条面经收集.md
+++ b/面试真题/头条面经收集.md
@@ -276,31 +276,76 @@ B+ 树的优点在于：
 
 1. 线程和进程的区别,创建线程和进程的开销指什么
 
-    **进程**是系统进行资源分配的基本单位，有独立的内存地址空间； 
+   **进程**是系统进行资源分配的基本单位，有独立的内存地址空间； 
 
    **线程**是程序执行时的最小单位，它是进程的一个执行流，是CPU调度和分派的基本单位，没有单独地址空间，有独立的栈区等。
 
-   在开销方面：每个进程都有独立的代码和数据空间（程序上下文），程序之间的切换会有较大的开销；线程可以看做轻量级的进程，同一类线程共享代码和数据空间，每个线程都有自己独立的运行栈和程序计数器（PC），线程之间切换的开销小。
+   在开销方面：每个进程都有独立的代码和数据空间（程序上下文），程序之间的切换会有较大的开销，进程需要切换页表；线程可以看做轻量级的进程，同一类线程共享代码和数据空间，每个线程都有自己独立的运行栈和程序计数器（PC），线程之间切换的开销小。
 
    在操作系统中能同时运行多个进程（程序）；而在同一个进程（程序）中有多个线程同时执行（通过CPU调度，在每个时间片中只有一个线程执行）
 
 2. 操作系统的内存管理
 
-     
+   1. 操作系统负责内存空间的分配与回收
 
-3. 分⻚式的⻚表放在哪 
+   2. 操作系统要提供某种技术从逻辑上对内存空间进行扩充
 
-4. 进程的PCB(进程控制块)⾥还有哪些东西
+      - 交换 ，进程暂时换出内存，动态调度
+
+      - 虚拟内存 ：①多次性( 无需一次性装入内存 )② 对换性 ( 无需在作业运行时常驻内存 ) ③虚拟性(  从逻辑上扩充空间 )   
+
+   3. 提供地址转换，负责程序逻辑地址与物理地址进行转换
+
+3. 分页式的页表放在哪 
+
+   页是逻辑地址空间（虚拟内存空间）的划分，是逻辑地址空间顺序等分而成的一段逻辑空间，并依次连续编号。页的大小一般为 512B~8KB。逻辑地址可以解读成页号+地址偏移量（页内地址）
+
+   页表是记录逻辑空间（虚拟内存）中每一页在内存中对应的物理块号。但并非每一页逻辑空间都会实际对应着一个物理块，只有实际驻留在物理内存空间中的页才会对应着物理块。如果有效位为0，说明不在实际内存中，会引发缺页中断
+
+    页表是需要一直驻留在物理内存中的（多级页表除外，多级页表只有第一级在内存中），另外页表的起址和长度存放在 PCB（进程控制块）进程控制结构体中
+
+4. 进程的PCB(进程控制块)⾥还有哪些东西                                                                                                                                                                                                                                                                                                                                               
 
 5. linux脚本，杀掉包含⼀个关键字的所有进程
 
+   kill 
+
 6. select和epoll的区别 
+
+   - 操作方式及效率：
+
+     select是遍历，需要遍历fd_set每一个比特位（= MAX_CONN），O(n)；poll是遍历，但只遍历到pollfd数组当前已使用的最大下标（≠ MAX_CONN），O(n)；epoll是回调，O(1)。
+
+   - 最大连接数：
+
+     select为1024/2048（一个进程打开的文件数是有限制的）；poll无上限；epoll无上限。
+
+   - fd拷贝：
+
+     select每次都需要把fd集合从用户态拷贝到内核态；poll每次都需要把fd集合从用户态拷贝到内核态；epoll调用epoll_ctl时拷贝进内核并放到事件表中，但用户进程和内核通过mmap映射共享同一块存储，避免了fd从内核赋值到用户空间。
+
+   - 触发方式
+
+     select是水平触发，epoll可以设置边缘触发
+
+   - 其他：
+
+     select每次内核仅仅是通知有消息到了需要处理，具体是哪一个需要遍历所有的描述符才能找到。epoll不仅通知有I/O到来还可通过callback函数具体定位到活跃的socket，实现伪AIO。
 
 7. 分配内存的时候会发⽣什么事情 
 
 8. 单核CPU，A进程有2个线程，B进程有3个线程，这⼏个线程获得执⾏⼏率分别是多⼤  
 
 9. 同步IO和异步IO 
+
+   区别: 同步IO是程序进行IO操作，异步IO是内核进行IO操作，最后返回程序数据存储地址
+
+   IO分两阶段：
+
+   1.数据准备阶段 ( 阻塞 和非阻塞IO区别 )
+   2.内核空间复制回用户进程缓冲区阶段( 异步可以在此阶段干别的事 )
+
+   IO由程序接管，写一个读一个，而异步IO，内核把数据全部读完后，返回给程序
 
 10. 死锁及如何避免 
 
@@ -320,7 +365,7 @@ B+ 树的优点在于：
 
     CPU 通过一个**虚拟地址（virtual address,VA）**来访问主存，这个虚拟地址在被送到主存之前会先转换成一个物理地址。将虚拟地址转换成物理地址的任务叫做**地址翻译（address translation）**。
 
-    地址翻译需要 CPU 硬件和操作系统之间的配合。 CPU 芯片上叫做**内存管理单元（Menory Management Unit, MMU）**的专用硬件，利用存放在主存中的查询表来动态翻译虚拟地址，该表的内容由操作系统管理。
+    地址翻译需要 CPU 硬件和操作系统之间的配合。 CPU 芯片上叫做**内存管理单元（Menory Management Unit, MMU）**的专用硬件，利用存放在主存中的查询页表来动态翻译虚拟地址，该表的内容由操作系统管理。
 
 ### NetWork题⽬ 
 
@@ -393,7 +438,7 @@ B+ 树的优点在于：
 
 6. 讲⼀下 CDN 
 
-    CDN是内容分发网，管理分布在多个地理位置上的服务器，在服务器上存储内容。用户请求内容时，会从信号最好的服务器拉取，如果该服务器没有用户请求的资源，会从其他服务器上拉取，然后存储其副本，他会删除不经常请求的内容
+   CDN是内容分发网，管理分布在多个地理位置上的服务器，在服务器上存储内容。用户请求内容时，会从信号最好的服务器拉取，如果该服务器没有用户请求的资源，会从其他服务器上拉取，然后存储其副本，他会删除不经常请求的内容
 
    **CDN通过DNS来截取和重定向请求**，使用户获得最好的体验。这时权威dns服务器不是返回IP而是返回CDN域的主机名，通过这样进入CDN专用的DNS基础设施，最后返回信号最好的服务器IP
 
@@ -446,11 +491,11 @@ B+ 树的优点在于：
 
 10. UDP了解过？和TCP区别？建不建连接是指的什么 
 
-   UDP是无连接的，可以广播和多播，不保证数据可靠传输，首部8字节，无拥塞控制，面向报文
+  UDP是无连接的，可以广播和多播，不保证数据可靠传输，首部8字节，无拥塞控制，面向报文
 
-   TCP是点到点的全双工连接，保证数据可靠，按序到达，首部20字节，有拥塞控制，面向字节流
+  TCP是点到点的全双工连接，保证数据可靠，按序到达，首部20字节，有拥塞控制，面向字节流
 
-   建立连接双方可以进行进行数据交换，且数据保证准确
+  建立连接双方可以进行进行数据交换，且数据保证准确
 
 11. osi七层模型
 
@@ -477,7 +522,29 @@ B+ 树的优点在于：
 
 15. ⽹络层都有哪些协议，区别是什么，各⾃是做什么的 .
 
+    - IP（网际协议）是为计算机网络相互连接进行通信而设计的协议。
+    - ARP（地址解析协议）ARP 实现由 IP 地址得到 MAC 地址
+      - ARP只为在同一个子网上的主机和路由器接口解析IP地址 ( 广播 )
+      - 每个主机都有一个 ARP 高速缓存，里面有本局域网上的各主机和路由器的 IP 地址到 MAC 地址的映射表。
+    - ICMP（网际控制报文协议）被主机和路由器用来彼此沟通网络层的信息
+      - ICMP 报文分为差错报告报文和询问报文
+      - ![](./图片/ICMP种类.png)
+      - 应用 ping   「主要用来测试两台主机之间的连通性 」和 Traceroute 「用来跟踪一个分组从源点到终点的路径」
+      - Ping 的原理是通过向目的主机发送 ICMP Echo 请求报文，目的主机收到之后会发送 Echo 回答报文。Ping 会根据时间和成功响应的次数估算出数据包往返时间以及丢包率。
+      - Traceroute 发送的 IP 数据报封装的是无法交付的 UDP 用户数据报，并由目的主机发送终点不可达差错报告报文。
+        - 源主机向目的主机发送一连串的 IP 数据报。第一个数据报 P1 的生存时间 TTL 设置为 1，当 P1 到达路径上的第一个路由器 R1 时，R1 收下它并把 TTL 减 1，此时 TTL 等于 0，R1 就把 P1 丢弃，并向源主机发送一个 ICMP 时间超过差错报告报文；
+        - 源主机接着发送第二个数据报 P2，并把 TTL 设置为 2。P2 先到达 R1，R1 收下后把 TTL 减 1 再转发给 R2，R2 收下后也把 TTL 减 1，由于此时 TTL 等于 0，R2 就丢弃 P2，并向源主机发送一个 ICMP 时间超过差错报文。
+        - 不断执行这样的步骤，直到最后一个数据报刚刚到达目的主机，主机不转发数据报，也不把 TTL 值减 1。但是因为数据报封装的是无法交付的 UDP，因此目的主机要向源主机发送 ICMP 终点不可达差错报告报文。
+        - 之后源主机知道了到达目的主机所经过的路由器 IP 地址以及到达每个路由器的往返时间。
+    - IGMP（网际组管理协议）
+
+    
+
 16. 数据链路层都有哪些协议，区别是什么，各⾃是做什么的
+
+    CSMA/CD 表示载波监听多点接入 / 碰撞检测。
+
+    PPP 协议是用户计算机和 ISP 进行通信时所使用的数据链路层协议。
 
 17. tcp状态
 
