--- a/面试真题/头条面经收集.md
+++ b/面试真题/头条面经收集.md
@@ -284,7 +284,55 @@ B+ 树的优点在于：
 
    在操作系统中能同时运行多个进程（程序）；而在同一个进程（程序）中有多个线程同时执行（通过CPU调度，在每个时间片中只有一个线程执行）
 
-2. 操作系统的内存管理
+2. 进程间通信
+
+   - 管道（PIPE）
+     - 有名管道：一种半双工的通信方式，它允许无亲缘关系进程间的通信
+       - 优点：可以实现任意关系的进程间的通信
+       - 缺点：
+         1. 长期存于系统中，使用不当容易出错
+         2. 缓冲区有限
+     - 无名管道：一种半双工的通信方式，只能在具有亲缘关系的进程间使用（父子进程）
+       - 优点：简单方便
+       - 缺点：
+         1. 局限于单向通信
+         2. 只能创建在它的进程以及其有亲缘关系的进程之间
+         3. 缓冲区有限
+   - 信号量（Semaphore）：一个计数器，可以用来控制多个线程对共享资源的访问
+     - 优点：可以同步进程
+     - 缺点：信号量有限
+   - 信号（Signal）：一种比较复杂的通信方式，用于通知接收进程某个事件已经发生
+   - 消息队列（Message Queue）：是消息的链表，存放在内核中并由消息队列标识符标识
+     - 优点：可以实现任意进程间的通信，并通过系统调用函数来实现消息发送和接收之间的同步，无需考虑同步问题，方便
+     - 缺点：信息的复制需要额外消耗 CPU 的时间，不适宜于信息量大或操作频繁的场合
+   - 共享内存（Shared Memory）：映射一段能被其他进程所访问的内存，这段共享内存由一个进程创建，但多个进程都可以访问
+     - 优点：无须复制，快捷，信息量大
+     - 缺点：
+       1. 通信是通过将共享空间缓冲区直接附加到进程的虚拟地址空间中来实现的，因此进程间的读写操作的同步问题
+       2. 利用内存缓冲区直接交换信息，内存的实体存在于计算机中，只能同一个计算机系统中的诸多进程共享，不方便网络通信
+   - 套接字（Socket）：可用于不同机器间的进程通信。
+     - 优点：
+       1. 传输数据为字节级，传输数据可自定义，数据量小效率高
+       2. 传输数据时间短，性能高
+       3. 适合于客户端和服务器端之间信息实时交互
+       4. 可以加密,数据安全性强
+     - 缺点：需对传输的数据进行解析，转化成应用级的数据。
+
+3. Linux进程控制
+
+   - 进程地址空间（地址空间）
+
+     虚拟存储器为每个进程提供了独占系统地址空间的假象。尽管每个进程地址空间内容不尽相同，但是他们的都有相似的结构。X86 Linux进程的地址空间底部是保留给用户程序的，包括文本、数据、堆、栈等，其中文本区和数据区是通过存储器映射方式将磁盘中可执行文件的相应段映射至虚拟存储器地址空间中。有一些"敏感"的地址需要注意下，对于32位进程来说，代码段从0x08048000开始。从0xC0000000开始到0xFFFFFFFF是内核地址空间，通常情况下代码运行在用户态（使用0x00000000 ~ 0xC00000000的用户地址空间），当发生系统调用、进程切换等操作时CPU控制寄存器设置模式位，进入内和模式，在该状态（超级用户模式）下进程可以访问全部存储器位置和执行全部指令。也就说32位进程的地址空间都是4G，但用户态下只能访问低3G的地址空间，若要访问3G ~ 4G的地址空间则只有进入内核态才行。
+
+   - 进程控制块（PCB）
+
+     进程的调度实际就是内核选择相应的进程控制块，被选择的进程控制块中包含了一个进程基本的信息。
+
+   - 上下文切换
+
+     内核管理所有进程控制块，而进程控制块记录了进程全部状态信息。每一次进程调度就是一次上下文切换，所谓的上下文本质上就是当前运行状态，主要包括通用寄存器、浮点寄存器、状态寄存器、程序计数器、用户栈和内核数据结构（页表、进程表、文件表）等。进程执行时刻，内核可以决定抢占当前进程并开始新的进程，这个过程由内核调度器完成，当调度器选择了某个进程时称为该进程被调度，该过程通过上下文切换来改变当前状态。一次完整的上下文切换通常是进程原先运行于用户态，之后因系统调用或时间片到切换到内核态执行内核指令，完成上下文切换后回到用户态，此时已经切换到进程B。
+
+4. 操作系统的内存管理
 
    1. 操作系统负责内存空间的分配与回收
 
@@ -296,7 +344,7 @@ B+ 树的优点在于：
 
    3. 提供地址转换，负责程序逻辑地址与物理地址进行转换
 
-3. 分页式的页表放在哪 
+5. 分页式的页表放在哪 
 
    页是逻辑地址空间（虚拟内存空间）的划分，是逻辑地址空间顺序等分而成的一段逻辑空间，并依次连续编号。页的大小一般为 512B~8KB。逻辑地址可以解读成页号+地址偏移量（页内地址）
 
@@ -304,13 +352,15 @@ B+ 树的优点在于：
 
     页表是需要一直驻留在物理内存中的（多级页表除外，多级页表只有第一级在内存中），另外页表的起址和长度存放在 PCB（进程控制块）进程控制结构体中
 
-4. 进程的PCB(进程控制块)⾥还有哪些东西                                                                                                                                                                                                                                                                                                                                               
+6. 进程的PCB(进程控制块)⾥还有哪些东西     
 
-5. linux脚本，杀掉包含⼀个关键字的所有进程
+   **进程标识符**      **进程当前状态**    **进程优先级**   **CPU现场保护区**                                                                                                                                                                                                                                                                                                                        
+
+7. linux脚本，杀掉包含⼀个关键字的所有进程
 
    kill 
 
-6. select和epoll的区别 
+8. select和epoll的区别 
 
    - 操作方式及效率：
 
@@ -328,44 +378,82 @@ B+ 树的优点在于：
 
      select是水平触发，epoll可以设置边缘触发
 
+     **水平触发通知：**如果文件描述符上可以非阻塞地执行I/O系统调用，此时认为它已经就绪，触发通知。 同一个事件会被重复通知，如果没处理完
+
+     **举个例子，比如说我们采用epoll水平触发模式监听一个文件描述符的可读，当这个文件可读就绪时，epoll会触发一个通知，然后我们执行一次读取操作，但这次操作我们并没有把该文件描述符的数据全部读取完。当下一次调用epoll监听该文件描述符时，epoll还会再次触发通知，直到该事件被处理完。这就意味着，当epoll触发通知后，我们可以不立即处理该事件，当下次调用epoll监听时，然后会再次向应用程序通告此事件，此时我们再处理也不晚。** 
+
+     **边沿触发通知：**如果文件描述符自上次状态检查以来有了新的I/O活动(比如新的输入)，此时需要触发通知。
+
+     **还是上个例子，如果这次我们采用epoll的边沿触发模式监听一个文件描述符的可读，当可读就绪时，epoll会触发一个通知，如果我们此时不立即处理该事件，当下次再调用epoll监听时，虽然该文件描述符的状态是可读的，但是此时epoll并不会再给应用程序发送通知。因为在边沿触发工作模式下，只有下一个新的I/O事件到来时，才会再次发送通知**
+
    - 其他：
 
      select每次内核仅仅是通知有消息到了需要处理，具体是哪一个需要遍历所有的描述符才能找到。epoll不仅通知有I/O到来还可通过callback函数具体定位到活跃的socket，实现伪AIO。
 
-7. 分配内存的时候会发⽣什么事情 
+9. 分配内存的时候会发⽣什么事情 
 
-8. 单核CPU，A进程有2个线程，B进程有3个线程，这⼏个线程获得执⾏⼏率分别是多⼤  
+10. 单核CPU，A进程有2个线程，B进程有3个线程，这⼏个线程获得执⾏⼏率分别是多⼤  
 
-9. 同步IO和异步IO 
+11. 同步IO和异步IO 
 
-   区别: 同步IO是程序进行IO操作，异步IO是内核进行IO操作，最后返回程序数据存储地址
+    区别: 同步IO是程序进行IO操作，异步IO是内核进行IO操作，最后返回程序数据存储地址
 
-   IO分两阶段：
+    IO分两阶段：
 
-   1.数据准备阶段 ( 阻塞 和非阻塞IO区别 )
-   2.内核空间复制回用户进程缓冲区阶段( 异步可以在此阶段干别的事 )
+    1.数据准备阶段 ( 阻塞 和非阻塞IO区别 )
+    2.内核空间复制回用户进程缓冲区阶段( 异步可以在此阶段干别的事 )
 
-   IO由程序接管，写一个读一个，而异步IO，内核把数据全部读完后，返回给程序
+    IO由程序接管，写一个读一个，而异步IO，内核把数据全部读完后，返回给程序
 
-10. 死锁及如何避免 
+12. 死锁及如何避免 
 
-11. 代码跑起来需要⼏个内存块？各个地⽅存的什么？ 
+    **原因**
 
-12. 堆和栈？线程共享的是那⼀部分是哪⼀部分？
+    - 系统资源不足
+    - 资源分配不当
+    - 进程运行推进顺序不合适
 
-13. ⼿写LRU
+    **产生条件**
 
-14. ⼀个进程，有10个⼦进程，那么⼀个⼦进程fork⼀个⼦进程，那么这个⼦进程有多少个进程。 
+    - 互斥
+    - 请求和保持
+    - 资源不能剥夺
+    - 循环等待
 
-15. 如何查找出现频率最⾼的100个ip地址(shell) 16. Linux io模型(select, poll, epoll的区别，⽔平触发和边缘触发的区别)
+    **预防**
 
-16. 虚拟内存
+    - 打破互斥条件：改造独占性资源为虚拟资源，大部分资源已无法改造。
+    - 打破不可抢占条件：当一进程占有一独占性资源后又申请一独占性资源而无法满足，则退出原占有的资源。
+    - 打破占有且申请条件：采用资源预先分配策略，即进程运行前申请全部资源，满足则运行，不然就等待，这样就不会占有且申请。
+    - 打破循环等待条件：实现资源有序分配策略，对所有设备实现分类编号，所有进程只能采用按序号递增的形式申请资源。
+    - 有序资源分配法
+    - 银行家算法
+
+13. 代码跑起来需要⼏个内存块？各个地⽅存的什么？ 
+
+14. 堆和栈？线程共享的是那⼀部分是哪⼀部分？
+
+15. ⼿写LRU( 最近最久未使用算法 )
+
+    链表，用了的放开头
+
+16. ⼀个进程，有10个⼦进程，那么⼀个⼦进程fork⼀个⼦进程，那么这个⼦进程有多少个进程。 
+
+17. 如何查找出现频率最⾼的100个ip地址(shell) 16. Linux io模型(select, poll, epoll的区别，⽔平触发和边缘触发的区别)
+
+18. 虚拟内存
 
     虚拟内存是计算机系统内存管理的一种技术。它使得应用程序认为它拥有连续的可用的内存（一个连续完整的地址空间），而实际上，它通常是被分隔成多个物理内存碎片，还有部分暂时存储在外部磁盘存储器上，在需要时进行数据交换
+
+    虚拟内存采用的是分页技术，也就是将地址空间划分成固定大小的页，每一页再与内存进行映射。
 
     CPU 通过一个**虚拟地址（virtual address,VA）**来访问主存，这个虚拟地址在被送到主存之前会先转换成一个物理地址。将虚拟地址转换成物理地址的任务叫做**地址翻译（address translation）**。
 
     地址翻译需要 CPU 硬件和操作系统之间的配合。 CPU 芯片上叫做**内存管理单元（Menory Management Unit, MMU）**的专用硬件，利用存放在主存中的查询页表来动态翻译虚拟地址，该表的内容由操作系统管理。
+
+19. 分页和分段
+
+    分页主要用于实现虚拟内存，从而获得更大的地址空间；分段主要是为了使程序和数据可以被划分为逻辑上独立的地址空间并且有助于共享和保护。
 
 ### NetWork题⽬ 
 
