--- a/面试真题/头条面经收集.md
+++ b/面试真题/头条面经收集.md
@@ -370,7 +370,7 @@ B+ 树的优点在于：
 
      select为1024/2048（一个进程打开的文件数是有限制的）；poll无上限；epoll无上限。
 
-   - fd拷贝：
+   - fd拷贝： 
 
      select每次都需要把fd集合从用户态拷贝到内核态；poll每次都需要把fd集合从用户态拷贝到内核态；epoll调用epoll_ctl时拷贝进内核并放到事件表中，但用户进程和内核通过mmap映射共享同一块存储，避免了fd从内核赋值到用户空间。
 
@@ -394,6 +394,8 @@ B+ 树的优点在于：
 
 10. 单核CPU，A进程有2个线程，B进程有3个线程，这⼏个线程获得执⾏⼏率分别是多⼤  
 
+   这要看这些进程是用户级线程还是内核支持线程 ， 如果是用户级线程，内核调度仍以进程为单位，感知不到该线程，如果是内核支持线程，那么调度以线程为单位
+
 11. 同步IO和异步IO 
 
     区别: 同步IO是程序进行IO操作，异步IO是内核进行IO操作，最后返回程序数据存储地址
@@ -415,10 +417,10 @@ B+ 树的优点在于：
 
     **产生条件**
 
-    - 互斥
-    - 请求和保持
-    - 资源不能剥夺
-    - 循环等待
+    - 互斥。某资源只能被一个进程调用
+    - 请求和保持。进程保持了资源，又提出新的资源请求
+    - 资源不能剥夺。资源只能等进程使用完自己释放
+    - 循环等待。a等待b占用资源，b等待a占用资源
 
     **预防**
 
@@ -605,6 +607,8 @@ B+ 树的优点在于：
     当被告知接收窗口为0后，发送方不能再发送了，它会定期的发送窗口探寻，直到窗口不为0，或者定时器过期，关闭TCP连接
 
 14. DNS解析过程 
+
+    区分 协议，域名和端口号，然后在浏览器缓冲中找是否有对应IP
 
     主机询问本地dns服务器是否存在该域名，如果不存在，那么本地服务器会访问根dns，根dns返回顶级dns的IP，本地dns访问顶级dns，返回权威dns的IP，本地dns访问权威dns，dns返回对应IP，本地将IP返回给主机
 
