--- a/后台开发核心技术与应用实践.md
+++ b/后台开发核心技术与应用实践.md
@@ -82,4 +82,101 @@
 
 1. 后缀为`.c`的文件gcc当做C程序， g++当做C++程序
 2. 编译可以用 gcc/g++,链接可以用g++或gcc-lstdc++,因为gcc命令不能自动和c++程序使用的库链接
-3. 
+
+### makefile的编写
+
+makefile定义一系列规则，指定哪些文件需要先编译，哪些文件需要后编译，哪些文件需要重新编译等，一个工程的编译规则
+
+`file1.h`
+
+```c++
+#ifndef FILE1_H_
+#define FILE1_H_
+#ifdef __cplusplus
+	extern "C" {
+        #endif
+        void File1Print();
+        #ifdef __cplusplus
+    }
+    #endif
+#endif
+```
+
+`file1.cpp`
+
+```c++
+#include<iostream>
+#include "file1.h"
+using namespace std;
+void File1Print()
+{
+    cout<<"Print file1******"<<endl;
+}
+```
+
+`file2.cpp`
+
+```c++
+#include <iostream>
+#include "file1.h"
+using namespace std;
+int main()
+{
+    cout<<"Print file2 "<<endl;
+    File1Print();
+    return 0;
+}
+```
+
+`makefile`
+
+```makefile
+helloword:file1.o file2.o
+	g++ file1.o file2.o -o helloworld
+
+file2.o:file2.cpp
+	g++ -c file2.cpp -o file2.o
+
+file1.o:file1.cpp
+	g++ -c file1.cpp -o file1.o
+
+clean:
+	rm -rf *.o helloworld
+
+```
+
+![](./图片/makefile.png)
+
+```makefile
+// 使用变量
+XX = g++
+CFLAGS = -Wall -O -g   // -O 表示编译时优化 -Wall 输出所有警告  -g 编译debug版本
+OBJS = file1.o file2.o
+
+helloworld : $(OBJS)
+	$(XX) $(OBJS) -o helloworld
+```
+
+```makefile
+	
+//使用函数
+CC = gcc
+XX = g++
+CFLAGS = -Wall -O -g 
+// SOURCES = $(wildcard *.c *.cpp)
+wildcard 展开为已经存在的，使用空格分开的 匹配此模式的所有文件列表 ，然后存入SOURCES
+
+// OBJS = $(patsubst %.c,%.o,$(patsubst %.cpp %.o,$(SOURCES)))
+patsubst 用于匹配替换， 三个参数  1. 匹配样式 2. 用什么替换 3. 需要被处理的列表
+这一句的意思是将SOURCES中所有.c和 .cpp文件 换成.o文件
+
+%.o : %.c 
+	$(CC) $(CFLAGS) -c $< -o $@
+%.o : %.cpp 
+	$(XX) $(CFLAGS) -c $< -o $@
+	
+// $<  扩展成依赖列表中第一个依赖文件
+// $@  拓展成当前规则的目的文件名
+// $^  拓展成整个依赖的列表
+```
+
