--- a/后台开发核心技术与应用实践.md
+++ b/后台开发核心技术与应用实践.md
@@ -180,3 +180,64 @@ patsubst 用于匹配替换， 三个参数  1. 匹配样式 2. 用什么替换 
 // $^  拓展成整个依赖的列表
 ```
 
+### 目标文件
+
+ELF是一种用于二进制文件，可执行文件，目标代码，共享库和核心转储的标准文件格式
+
+DLF标准的目的是提供一组二进制接口定义，这些接口可以延伸到多操作系统中，从而减少重新编码，编译程序的需要
+
+目标文件有三种类型
+
+- 可重定位的目标文件 (.o)
+
+- 可执行的目标文件 
+
+- 可被共享的目标文件 (.so  )
+
+  动态库发挥作用的步骤 
+
+   	1. 链接器拿它和其他.o文件或 .so文件 作为输入，经链接，生成另外的.so文件或可执行文件
+   	2. 在运行时，动态链接器拿它和可执行文件以及别的.so文件一起处理，在linux中创建一个进程映象
+
+左: 可重定位文件格式
+
+右: 可执行文件或可被共享的对象文件的格式
+
+![](./图片/ELF组成.png)
+
+我们可以通过file命令查看文件属于那种ELF文件
+
+
+
+通过`readelf -h 文件` 可以查看文件头信息
+
+![](./图片/file.o头信息.png)
+
+![](./图片/helloworld头信息.png)
+
+重定位文件不会有 程序入口点地址，程序入口点是程序真正执行起来时，第一条要运行的指令的地址。重定位文件只是供再链接而已
+
+file1.o 有 15个节头(section) ，没有 program headers
+
+`section`是ELF文件中，用来装载内容数据的最小容器
+
+通过`readelf -S 文件` 查看文件section表
+
+ 	1. text section 装载可执行代码
+ 	2. data  section 装载被初始化数据
+ 	3. bss section 装载未被初始化数据
+ 	4. .rec 打头的section装载重定位条目
+ 	5. symtab 或 dynsym section 装载符号信息
+ 	6. strtab 或 dynstr section 装载字符串信息
+ 	7. 其他section 如 满足调试目的， 满足动态链接与加载目的
+
+![](./图片/file1.o的section1.png)
+
+![](./图片/file1.o的section2.png)
+
+暂略。。。。
+
+
+
+## 第五章 调试
+
