--- a/后台开发核心技术与应用实践.md
+++ b/后台开发核心技术与应用实践.md
@@ -241,3 +241,193 @@ file1.o 有 15个节头(section) ，没有 program headers
 
 ## 第五章 调试
 
+### strace
+
+strace是通过跟踪系统调用来让开发者知道程序在后台所做事情的工具
+
+`strace -c ./test` 
+
+将进程的所有系统调用做一个统计分析
+
+![](./图片/strace.png)
+
+`-o`可以输出到文件
+
+`strace -c -o test.txt ./test`
+
+`-T`每个系统调用所花费的时间
+
+strace可以追踪已有进程 `strace -p   （进程id)`
+
+### gdb
+
+gdb是调试工具，要在编译时将调试信息加到可执行文件中 `-g`
+
+使用 
+
+1. gdb  program  
+
+   program 为执行文件
+
+2. gdb program core
+
+   core是程序非法执行后的core dump产生文件
+
+3. gdb program  1234
+
+   可以指定服务程序运行时的进程id，我们这里指定他为1234
+
+`test.cpp`
+
+```c++
+#include<iostream>
+using namespace std;
+int func(int n)
+{
+    int result=0;
+    for(int i=1;i<=n;i++)
+    {
+        result+=i;
+    }
+    return result;
+}
+int main()
+{
+
+    int arr[10];
+    arr[0]=0;
+    arr[1]=1;
+    for(int i=2;i<10;i++)
+    {
+        arr[i]=arr[i-1]+arr[i-2];
+    }
+    cout<<"arr[9]"<<arr[9]<<endl;
+    cout<<"func(9)"<<func(9)<<endl;
+    return 0;
+}
+
+```
+
+|   命令    | 缩写 |                功能                |
+| :-------: | :--: | :--------------------------------: |
+|   list    |  l   |             查看源代码             |
+|   break   |  b   |              设置断点              |
+|   info    |      |              查看信息              |
+|    run    |  r   |      从头开始运行到第一个断点      |
+|  display  | disp |     每次到断点时输出观察的信息     |
+|   step    |  s   |         下一步，会进入函数         |
+|   next    |  n   |        下一步，不会进入函数        |
+|   print   |      |              输出信息              |
+| continue  |  c   |          运行到下一个断点          |
+|   start   |      |  开始运行，到main函数的第一行为止  |
+|   file    |      |              加载文件              |
+|   kill    |      |                杀死                |
+|   watch   |      | 每次观察的数据改变会停下来然后输出 |
+| backtrace |  bt  |           查看函数的堆栈           |
+|   quit    |  q   |                退出                |
+|  set var  |      |             修改变量值             |
+
+**2.用gdb分析coredump文件**
+
+core是程序非法执行后core  dump后产生的信息，coredump中含有当进程被终止时内存，CPU寄存器和各种函数调用堆栈信息等，程序会提示`Segmentation fault`
+
+查看coredump的**存储路径**`cat  /proc/sys/kernel/core_pattern`
+
+存储默认是当前目标，也可以指定目录，如希望生成到`/data/coredump/core`下，
+
+调用命令`echo "/data/coredump/core" > /proc/sys/kernel/core_pattern`
+
+
+
+如果一个程序多次奔溃，那么新生成的core文件会覆盖之前的，我们可以通过修改`kernel`参数，指定内核生成的core文件的文件名
+
+例如要生成名字为`core.filename.pid`的文件
+
+`echo "/data/coredump/core.%e.%p" > /proc/sys/kernel/core_pattern`
+
+这样core文件会带有崩溃的程序名和他的进程id
+
+
+
+`/proc/sys/kernel/core_uses_pid`如果被设置成 1 ，那么即使`core_pattern`没设置成%p, 在生成core时也会加上进程id
+
+
+
+**产生core文件的条件**
+
+1. 首先确认当前会话的能生成的coredump文件大小 ，
+
+   `ulimit -c` 可以查看文件大小的最大值
+
+   `ulimit -c unlimited`  生成大小不限制   `ulimit -c [size]` ，size单位是blocks，1blocks=512Bytes
+
+   上面只对当前会话有效，如果想系统均有效，则得在`/etc/profile`中 加入一行`ulimit -c unlimited` 
+
+2. 执行对应程序的用户具有对写入core目录的写权限以及有足够的空间
+
+如果能保证这两点，那么就会提示`Segmentation fault(core dumped)`
+
+
+
+**产生core文件的原因**
+
+1. 内存访问越界
+
+   - 错误下标
+
+   - 字符串依赖 字符串接收符('\0')来判读字符串是否结束 ,但是字符串没有使用正常的结束符
+
+   - 使用strcpy,strcat,sprintf,strcmp,strcasecmp 时，容易出现字符串读/写 越界情况
+
+     应使用(strncpy , strlcpy,strncat,strlcat ,snprintf ,strncmp, strncasecmp) 等操作
+
+2. 多线程程序使用了线程不安全的函数
+
+3. 多线程读写的数据未加锁保护
+
+4. 非法指针，包括使用空函数  或  随意使用指针转换(内存对齐不同，可能会出现 bus error 导致 core dump)
+
+5. 堆栈溢出
+
+   不使用大的局部变量，因为局部变量存储在栈上，容易造成堆栈溢出
+
+`test.cpp`
+
+```c++
+#include<stdio.h>
+int main()
+{
+    int b=1;
+    int* a;
+    *a=b;
+    return 0;
+}
+
+```
+
+![](./图片/core的ELF头部.png)
+
+因为core文件没有符号表信息，所以要和可执行文件一起操作
+
+`gdb test core.test.103241`
+
+![](./图片/gdb core.png)
+
+发现是第六步这边出错，可以打印 a和b的值
+
+
+
+### top
+
+top能实时显示各个进程的资源占用状况
+
+![](./图片/top1.png)
+
+
+
+![](./图片/top.png)
+
+### ps
+
+ps命令列出的是当前在运行的进程的快照，如果想动态显示进程信息，要用top命令
+
